--- a/base/kustomization.yaml
+++ b/base/kustomization.yaml
@@ -6,12 +6,12 @@ namespace: awx
 generatorOptions:
   disableNameSuffixHash: true
 
-secretGenerator:
-  - name: awx-secret-tls
-    type: kubernetes.io/tls
-    files:
-      - tls.crt
-      - tls.key
+# secretGenerator:
+#   - name: awx-secret-tls
+#     type: kubernetes.io/tls
+#     files:
+#       - tls.crt
+#       - tls.key
 
   - name: awx-postgres-configuration
     type: Opaque
