--- a/base/awx.yaml
+++ b/base/awx.yaml
@@ -11,10 +11,10 @@ spec:
   admin_user: admin
   admin_password_secret: awx-admin-password
 
-  ingress_type: ingress
-  ingress_hosts:
-    - hostname: awx.example.com
-      tls_secret: awx-secret-tls
+  # ingress_type: ingress
+  # ingress_hosts:
+  #   - hostname: awx.example.com
+  #     tls_secret: awx-secret-tls
 
   postgres_configuration_secret: awx-postgres-configuration
 
